# docs/swagger.json
@@ -9,7 +9,7 @@
     "host": "localhost:3000",
     "basePath": "/",
     "paths": {
-        "/capture": {
+        "/capture-multiple": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -17,7 +17,7 @@
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Capture snapshot from EZVIZ H1c camera",
+                "summary": "Capture multiple snapshots",
                 "parameters": [
                     {
                         "description": "Camera IP and RTSP code",
@@ -33,13 +33,10 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/main.Snapshot"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal error",
-                        "schema": {
-                            "type": "string"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/main.Snapshot"
+                            }
                         }
                     }
                 }
